# Auto-CV

./: .gitignore  .markdownlint-cli2.jsonc  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OBSIDIAN_PLUGIN_TEST_CHECKLIST.md  PLUGIN_COMPLETION_SUMMARY.md  README.md  install-auto-cv.ps1  manifest.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: plan-autoResume.prompt.md
.github/workflows/: build-plugin.yml  docs-markdown.yml  python-tests.yml  release-plugin.yml
docs/: ROADMAP.md  sections.md
example_vault/: _config.yml  _style.yml  custom.css  header.md
example_vault/assets/: README.md
example_vault/pages/: portfolio.md
example_vault/sections/: 01-summary.md  02-experience.md  03-education.md  04-skills.md  05-projects.md  06-certifications.md
examples/: README.md  generate_previews.py
examples/academic-researcher/: _config.yml  _style.yml  header.md
examples/academic-researcher/sections/: 01-summary.md  02-experience.md  03-education.md  04-publications.md  05-skills.md  06-awards.md  07-projects.md  08-certifications.md  09-service.md  10-languages.md
examples/consultant/: _style.yml  header.md
examples/consultant/sections/: 01-summary.md  02-experience.md  03-education.md  04-skills.md  05-projects.md  06-certifications.md
examples/creative-designer/: _config.yml  _style.yml  header.md
examples/creative-designer/sections/: 01-summary.md  02-experience.md  03-projects.md  04-skills.md  05-education.md  06-certifications.md
examples/data-scientist/: _config.yml  _style.yml  header.md
examples/data-scientist/sections/: 01-summary.md  02-experience.md  03-skills.md  04-projects.md  05-education.md  06-publications.md  07-certifications.md
examples/executive/: _config.yml  _style.yml  header.md
examples/executive/sections/: 01-summary.md  02-experience.md  03-education.md  04-skills.md  05-awards.md
examples/new-graduate/: _config.yml  _style.yml  header.md
examples/project-manager/: _style.yml  header.md
examples/software-engineer/: _config.yml  _style.yml  header.md
obsidian-plugin/: .eslintrc.json  .gitignore  DEVELOPMENT.md  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css
obsidian-plugin/src/: main.ts  modals.ts  settings-helpers.ts  settings.ts  utils.ts
obsidian-plugin/tests/: settings-helpers.test.ts  utils.test.ts
src/auto_cv/: __main__.py  cli.py
tests/: test_agents.py  test_body_parser.py  test_models.py  test_parser.py  test_presets.py  test_projects.py  test_renderers.py
tools/: with-node.ps1
(+160 files in other folders)
