[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-cv"
version = "1.0.0"
description = "Build CVs and resumes from Obsidian-style markdown vaults. Outputs LaTeX/PDF, DOCX, and HTML."
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Tanner Harms", email = "tanner@tannerharms.com"},
]
keywords = ["resume", "cv", "markdown", "latex", "docx", "html", "obsidian"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "jinja2>=3.1",
    "python-docx>=1.1",
    "markdown>=3.5",
    "typer>=0.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/TannerHarms/Auto-CV"
Repository = "https://github.com/TannerHarms/Auto-CV"
Issues = "https://github.com/TannerHarms/Auto-CV/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
agents = [
    "openai>=1.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.scripts]
auto-cv = "auto_cv.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
